z-index fix

--- a/sass/css/main.css
+++ b/sass/css/main.css
@@ -1016,6 +1016,7 @@ img {
   min-height: 796px;
   background: #ffffff;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
+  z-index: 55;
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
